travail exos chapitre 5, nouveaux sous dossiers

--- a/Chapitre 04.2 - JSON.ipynb
+++ b/Chapitre 04.2 - JSON.ipynb
@@ -460,9 +460,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lien', 'Auteur', 'Date', 'Tweet']\n",
+      "['http://twitter.com/statuses/939909652824969216', 'lapointejm', 'Sun Dec 10 17:28:18 +0000 2017', \"RT @agefen: L'ouverture de la nouvelle API de Gallica est un événement scientifique majeur pour le paysage des Humanités Numériques en Fran…\"]\n",
+      "['http://twitter.com/statuses/939505250674860035', 'AnthonyMasure', 'Sat Dec 09 14:41:21 +0000 2017', 'Des contenus supplémentaires de mon essai \"Design et humanités numériques\" @EditionsB42 sont disponibles en libre a… https://t.co/hJ6x0lymlw']\n",
+      "['http://twitter.com/statuses/939238712348758017', 'Combrit29', 'Fri Dec 08 21:02:13 +0000 2017', 'RT @IHTP_CNRS: Guerre froide, sécurité nationale et Dirty War. Le retour du passé latino-américain à travers les « documents déclassifiés »…']\n",
+      "['http://twitter.com/statuses/939112613547528193', 's_fredriksson', 'Fri Dec 08 12:41:09 +0000 2017', 'RT @entroispoints: Présentation du livre d’@AnthonyMasure Design et humanités numériques #DesignDH @letankparis avec @nicolasthely et @Edit…']\n",
+      "['http://twitter.com/statuses/939096874388262912', 'AnthonyMasure', 'Fri Dec 08 11:38:37 +0000 2017', 'RT @entroispoints: Présentation du livre d’@AnthonyMasure Design et humanités numériques #DesignDH @letankparis avec @nicolasthely et @Edit…']\n",
+      "['http://twitter.com/statuses/939092994405339136', 'entroispoints', 'Fri Dec 08 11:23:12 +0000 2017', 'Présentation du livre d’@AnthonyMasure Design et humanités numériques #DesignDH @letankparis avec @nicolasthely et… https://t.co/qe1gkwrFEO']\n",
+      "['http://twitter.com/statuses/939086210210951169', 'SophieBertrnd', 'Fri Dec 08 10:56:14 +0000 2017', \"RT @Ecoledeschartes: [Vidéo] (re)voir la journée d'étude sur les #humanités #numériques, organisée par l'@ademec_enc\\nhttps://t.co/XPMeeVuRM…\"]\n",
+      "['http://twitter.com/statuses/939075181208850432', 'mshstoulouse', 'Fri Dec 08 10:12:25 +0000 2017', 'RT @urfistoulouse: Mise en ligne des vidéos de la captation de la 4e édition de la conférence annuelle sur les humanités numériques organis…']\n",
+      "['http://twitter.com/statuses/939057071739293696', 'rvrrr', 'Fri Dec 08 09:00:27 +0000 2017', \"RT @Ecoledeschartes: [Vidéo] (re)voir la journée d'étude sur les #humanités #numériques, organisée par l'@ademec_enc\\nhttps://t.co/XPMeeVuRM…\"]\n",
+      "['http://twitter.com/statuses/938915132469665797', 'LauraGuien', 'Thu Dec 07 23:36:26 +0000 2017', 'RT @IHTP_CNRS: Guerre froide, sécurité nationale et Dirty War. Le retour du passé latino-américain à travers les « documents déclassifiés »…']\n",
+      "['http://twitter.com/statuses/938878443684495360', 'vhugonnard1', 'Thu Dec 07 21:10:39 +0000 2017', 'RT @ISORE_SHS: #isore17 @lully1804\\nExperimenter les humanités numériques\\nOuvrage en accès libre en ligne (modèle auteur / payeur)']\n",
+      "['http://twitter.com/statuses/938877376469008385', 'vhugonnard1', 'Thu Dec 07 21:06:24 +0000 2017', 'RT @ISORE_SHS: #isore17 @lully1804\\nExperimenter les humanités numériques\\nIdée de combler un vide, donner une vision de la recherche en trai…']\n",
+      "['http://twitter.com/statuses/938877284123119616', 'vhugonnard1', 'Thu Dec 07 21:06:02 +0000 2017', 'RT @ISORE_SHS: #isore17 \\n@lully1804 \\nExperimenter les humanités numériques\\nCet ouvrage c est aussi une photographie de la recherche en trai…']\n",
+      "['http://twitter.com/statuses/938869523939241984', 'EATempora', 'Thu Dec 07 20:35:12 +0000 2017', 'RT @IHTP_CNRS: Guerre froide, sécurité nationale et Dirty War. Le retour du passé latino-américain à travers les « documents déclassifiés »…']\n",
+      "['http://twitter.com/statuses/938864145918824448', 'amgoulet3', 'Thu Dec 07 20:13:50 +0000 2017', \"RT @Ecoledeschartes: [Vidéo] (re)voir la journée d'étude sur les #humanités #numériques, organisée par l'@ademec_enc\\nhttps://t.co/XPMeeVuRM…\"]\n"
+     ]
+    }
+   ],
    "source": [
     "# Votre code ici\n",
     "import json           #on met TOUJOURS les imports en début de fichier : ça permet de savoir ce qu'on va trouver\n",
@@ -470,10 +493,10 @@
     "                       #1.modules intégrés / 2.paquets externes / 3. modeles que j'ai créé moi même \n",
     "\n",
     "# Votre code ici\n",
-    "\"\"\"\n",
+    "\n",
     "with open('data/json/twitter.humanitesnumeriques.json') as f: \n",
     "    data = json.load(f)           #on parse le contenu. Parser = traduire vers un langage de programmation une chaîne. Réaliser l'analyse de la syntaxe d'un texte\n",
-    "    with open(\"tableau_twitter.csv\", mode='w') as t:\n",
+    "    with open(\"csv/tableau_twitter.csv\", mode='w') as t:\n",
     "        tableau = csv.writer(t, delimiter='\\t')\n",
     "        tableau.writerow([\"lien\", \"Auteur\", \"Date\", \"Tweet\"])\n",
     "        for tweet in data[\"statuses\"]:\n",
@@ -481,20 +504,17 @@
     "# ou bien : tableau.writerow([\"http://twitter.com/statuses/{}\".format(tweet[\"id\"]), tweet[\"user\"][\"screen_name\"], tweet[\"created_at\"], tweet[\"text\"]])\n",
     "#mon code est trop dangereux: s¡il y a un pipe dans le tweet, cela fait une colonne! \n",
     "#lire le tableau : \n",
-    "with open(\"tableau_twitter.csv\", mode='r') as f:\n",
+    "with open(\"csv/tableau_twitter.csv\", mode='r') as f:\n",
     "    tableau = csv.reader(f, delimiter=\"\\t\")\n",
     "    for ligne in tableau:\n",
     "        print(ligne)\n",
-    "\"\"\"\n",
+    "\n",
     " \n",
     "#correction   \n",
-    "import json\n",
-    "import csv\n",
-    "\n",
     "with open(\"data/json/twitter.humanitesnumeriques.json\") as f:\n",
     "     data = json.load(f)\n",
     "\n",
-    "with open(\"humanitesnumeriques.csv\", \"w\") as f:\n",
+    "with open(\"csv/humanitesnumeriques.csv\", \"w\") as f:\n",
     "     writer = csv.writer(f, delimiter=\"|\")\n",
     "     writer.writerow([\"Lien\", \"Auteur\", \"Date\", \"Tweet\"])\n",
     "     for tweet in data[\"statuses\"]:\n",
@@ -506,13 +526,13 @@
     "         ])\n",
     "\n",
     "\n",
-    "with open(\"humanitesnumeriques2.csv\", \"w\") as f:\n",
+    "with open(\"csv/humanitesnumeriques2.csv\", \"w\") as f:\n",
     "     writer = csv.DictWriter(\n",
     "         f,\n",
     "         delimiter=\"|\",\n",
     "         fieldnames=[\"Lien\", \"Auteur\", \"Date\", \"Tweet\"]\n",
     "     )\n",
-    "     writer.writeheader()\n",
+    "     writer.writeheader()   #ecrit les fieldnames en header\n",
     "     for tweet in data[\"statuses\"]:\n",
     "         writer.writerow({\n",
     "             \"Date\": tweet[\"created_at\"],\n",
