--- a/Chapitre 04.3 - requetes.ipynb
+++ b/Chapitre 04.3 - requetes.ipynb
@@ -533,13 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Métadonnées associées à cet objet: [{'label': 'Repository', 'value': ''}, {'label': 'Digitised by', 'value': 'Bibliothèque nationale de France'}, {'label': 'Source Images', 'value': 'https://gallica.bnf.fr/ark:/12148/btv1b84259980'}, {'label': 'Metadata Source', 'value': 'http://oai.bnf.fr/oai2/OAIHandler?verb=GetRecord&metadataPrefix=oai_dc&identifier=oai:bnf.fr:gallica/ark:/12148/btv1b84259980'}, {'label': 'Shelfmark', 'value': 'Bibliothèque nationale de France. Département des Manuscrits. Français 412'}, {'label': 'Title', 'value': 'Recueil de textes , Vie de saints'}, {'label': 'Date', 'value': '1285'}, {'label': 'Language', 'value': 'français'}, {'label': 'Format', 'value': 'Vélin, miniatures, lettres ornées'}, {'label': 'Relation', 'value': 'Notice du catalogue : http://archivesetmanuscrits.bnf.fr/ark:/12148/cc50522d'}, {'label': 'Type', 'value': 'Manuscrit'}]\n",
+      "[{'label': 'Repository', 'value': ''}, {'label': 'Digitised by', 'value': 'Bibliothèque nationale de France'}, {'label': 'Source Images', 'value': 'https://gallica.bnf.fr/ark:/12148/btv1b84259980'}, {'label': 'Metadata Source', 'value': 'http://oai.bnf.fr/oai2/OAIHandler?verb=GetRecord&metadataPrefix=oai_dc&identifier=oai:bnf.fr:gallica/ark:/12148/btv1b84259980'}, {'label': 'Shelfmark', 'value': 'Bibliothèque nationale de France. Département des Manuscrits. Français 412'}, {'label': 'Title', 'value': 'Recueil de textes , Vie de saints'}, {'label': 'Date', 'value': '1285'}, {'label': 'Language', 'value': 'français'}, {'label': 'Format', 'value': 'Vélin, miniatures, lettres ornées'}, {'label': 'Relation', 'value': 'Notice du catalogue : http://archivesetmanuscrits.bnf.fr/ark:/12148/cc50522d'}, {'label': 'Type', 'value': 'Manuscrit'}]\n"
+     ]
+    }
+   ],
    "source": [
     "#votre code\n",
     "import csv\n",
-    "import json\n",
     "import requests\n",
     "\n",
     "#je créé un fichier .json pour voir les données :\n",
@@ -581,13 +589,32 @@
     "            numero=numero_image, nom=image[\"label\"], lien=image[\"images\"][0][\"resource\"][\"@id\"],largeur=image[\"height\"], longueur=image[\"width\"]).split(\"|\"))\n",
     "    return None  \n",
     "\n",
-    "#correction\n",
-    "def iiif_csv(ark, nom_csv):\n",
-    "\n",
+    "#correction  (j'ai rajouté toute la partie json qui n'était pas dans le code de la correction)\n",
+    "def iiif_csv_correction(ark, nom_csv):\n",
+    "    # A. Afficher Json\n",
+    "    rep = requests.get(\"https://gallica.bnf.fr/iiif/{}/manifest.json\".format(ark))\n",
+    "    rep = rep.json()\n",
+    "    print(rep[\"metadata\"])\n",
+    "    #B. générer csv\n",
+    "    colonnes = [\"Numéro\", \"Nom de Page\", \"Lien image\", \"Largeur\",\"Longueur\"]\n",
+    "    with open(nom_csv, mode=\"w\") as f:\n",
+    "        # Mes images sont dans\\\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow(colonnes)\n",
+    "        for i, image in enumerate(rep[\"sequences\"][0][\"canvases\"]):           \n",
+    "            writer.writerow([\n",
+    "            str(i+1),    #moi : cette correction ne me plait pas, car la numérotation commence à 0 dans le tableau. J'ai donc rajouté +1 à i\n",
+    "            image[\"label\"],\n",
+    "            image[\"images\"][0][\"resource\"][\"@id\"],\n",
+    "            str(image[\"width\"]),\n",
+    "            str(image[\"height\"])\n",
+    "             ])\n",
+    "    return None\n",
     "\n",
     "\n",
     "# Testez le code ici     \n",
-    "iiif_csv(\"ark:/12148/btv1b84259980\", \"pages.csv\")"
+    "iiif_csv(\"ark:/12148/btv1b84259980\", \"csv/pages.csv\")\n",
+    "iiif_csv_correction(\"ark:/12148/btv1b84259980\", \"csv/pages_correction.csv\")"
    ]
   },
   {
@@ -613,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
