--- a/Chapitre 06 - Flask, un framework d'application web.ipynb
+++ b/Chapitre 06 - Flask, un framework d'application web.ipynb
@@ -22,9 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(\"Bonjour le monde\"))\n",
     "print(type(\"Au revoir le monde\"))\n",
@@ -933,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
