--- a/Chapitre 02 - Les fonctions et les fichiers.ipynb
+++ b/Chapitre 02 - Les fonctions et les fichiers.ipynb
@@ -52,6 +52,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('cli/boubou_test.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    data_auteur = data[\"response\"][\"replies\"][\"content\"][\"reply\"]\n",
+    "    for item in data_auteur:\n",
+    "        print(type(item[\"isidore\"][\"enrichedCreators\"]))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "   \n",
+    "\n",
+    "    #item = data['response']['replies']['content']['reply']\n",
+    "    #print(item['isidore'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1717,7 +1771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
